Add logo and search images to the project
- Added logo.png (5,879 bytes) to src/Images
- Added search.png (576 bytes) to src/Images

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
   --breakpoint-xs: 480px;
 
-  --background-image-hero-pattern: url("../public/Images/BG.png");
+  --background-image-hero-pattern: url("../src/Images/BG.png");
 }
 
 @layer base {
